filters and sort

--- a/src/scss/components/all.scss
+++ b/src/scss/components/all.scss
@@ -1,7 +1,15 @@
 @import './header';
 @import './section_picture';
 @import './categories';
+@import './filter';
+@import './sort';
+
 
 ul {
     list-style-type: none;
   }
+
+
+
+
+
