--- a/src/scss/components/categories.scss
+++ b/src/scss/components/categories.scss
@@ -65,6 +65,7 @@
         height: 550px;
         position: relative;
         display: flex;
+        justify-content: space-between;
         flex-direction: column;
 
 
